Fix ItemTransforms immutable map type